--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ before_script:
   - echo $SERVICEACCOUNT | base64 -d > ./creds/serviceaccount.json
   - eval $(ssh-agent -s)
   #- echo "$CALM_DEPLOY_KEY" | tr -d '\r' | ssh-add -
-  #- mkdir -p ~/.ssh
+  - mkdir -p ~/.ssh
   - chmod 700 ~/.ssh
   - ssh-keyscan gitlab.com >> ~/.ssh/known_hosts
   - chmod 644 ~/.ssh/known_hosts
